fix animation top menu on mobile

--- a/client/src/app/top-menu/top-menu.component.scss
+++ b/client/src/app/top-menu/top-menu.component.scss
@@ -81,29 +81,50 @@ nav ul li a:hover {
 // @media screen and (max-width:734px){
 @media screen and (max-width:734px), screen and (pointer:none), screen and (pointer:coarse)  {
     $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    $menuItems: 7;
+    $menuItems: 4;
 
     nav {
         display: inline-block;
-        transition: all 1s ease-out, background 0.5s ease-out;
+        transition: background 0.5s ease-out;
         transition-delay: 0.2s;
+        height: fit-content;
         ul {
-            left: -1000px;
-            position: absolute;
-            display: initial;
+            position: relative;
+            display: block;
+            padding: 0px 48px 0;
+            list-style: none;
+            width: initial;
+            text-align: initial;
+            left: initial;
             li{
-                opacity:0;
+                display: initial;
+                margin-top: 5px;
+                opacity: 0;
+                a{
+                    transition: all .5s ease-out, opacity 0.3s ease-out;
+                    border-bottom: 0px solid #333;
+                    display: block;
+                    position: relative;
+                    color: #FFF;
+                    font-weight: 100;
+                    text-decoration: none;
+                    font-size: 0px;
+                    opacity: 0;
+                    transform:translateX(-30px);
+                }
             }
         }
         .home-button {
-            left: calc(50% - 3.2em);
+            float: right;
+            margin-right: calc(50% - 3.7em);
+            // right: calc(50% - 3.2em);
             padding: 0.4em;
             display: inline-flex;
             justify-content: center;
-            position: absolute;
+            position: relative;
             img{
-                height: 2em;
-                width: 2em;
+                height: 2.2em;
+                width: 2.2em;
             }
         }
     }
@@ -118,7 +139,7 @@ nav ul li a:hover {
         transform: rotate(0deg);
         transition: all 0.3s $cubic;
         user-select: none;
-        margin: 0.6em 0;
+        margin: 0.8em 0;
         -webkit-tap-highlight-color: transparent;
         #burger {
             width: 18px;
@@ -149,7 +170,7 @@ nav ul li a:hover {
         &.menu-opened {
             height: 100%;
             background-color: #000;
-            transition: all 1s ease-in, background 0.5s ease-in;
+            transition: all 0.5s ease-in;
             transition-delay: 0.25s;
             .burger-container {
                 transform: rotate(90deg);
@@ -166,40 +187,23 @@ nav ul li a:hover {
                     }
                 }
             }
-            ul.menu {
-                position: relative;
-                display: block;
-                padding: 0px 48px 0;
-                list-style: none;
-                width: initial;
-                text-align: initial;
-                left: initial;
-                li.menu-item {
-                    display: initial;
-                    margin-top: 5px;
-                    transform: scale(1.15) translateY(-30px);
-                    opacity: 0;
-                    transition: transform 0.5s $cubic, opacity 0.6s $cubic;
-                    @for $i from 1 through $menuItems {
-                        &:nth-child(#{$i}) {
+            ul.menu li.menu-item{
+                @for $i from 1 through $menuItems {
+                    &:nth-child(#{$i}) {
+                        a{
                             transition-delay: #{0.07 * $i+0.2}s;
                         }
                     }
-                    a {
-                        border-bottom: 1px solid #333;
-                        display: block;
-                        position: relative;
-                        color: #FFF;
-                        font-weight: 100;
-                        text-decoration: none;
-                        font-size: 22px;
-                        line-height: 2.35;
-                        font-weight: 200;
-                        width: 100%;
-                        &.active-link{
-                            color: $mainGreen;
-                            font-weight: 600;
-                        }
+                }
+                a{ 
+                    transform:translateX(0);
+                    transition: all .8s ease-out, opacity 0.6s ease-out;
+                    border-bottom: 1px solid #333;
+                    font-size: 22px;       
+                    opacity: 1;           
+                    &.active-link{
+                        color: $mainGreen;
+                        font-weight: 600;
                     }
                 }
             }
